Libft/libft_eval/libft-war-machine/deepthought
= Host-specific information ====================================================
$> hostname; uname -msr
Kimui-iMac-Pro.local
Darwin 20.2.0 x86_64
$> date
Sat Jan 23 21:09:17 KST 2021
$> gcc --version
Apple clang version 12.0.0 (clang-1200.0.32.28)
Target: x86_64-apple-darwin20.2.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple clang version 12.0.0 (clang-1200.0.32.28)
Target: x86_64-apple-darwin20.2.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= libft.h=======================================================================
$> norminette libft.h | grep -E '(Error|Warning)'
norminette : command not found

= Compiling libft ==============================================================
$> make re
rm -f ft_atoi.o ft_itoa.o
rm -f libft.a
gcc -Wall -Werror -Wextra -c ft_atoi.c ft_itoa.c
ft_itoa.c:15:22: error: unused parameter 'n' [-Werror,-Wunused-parameter]
char    *ft_itoa(int n)
                     ^
ft_itoa.c:18:1: error: non-void function does not return a value [-Werror,-Wreturn-type]
}
^
2 errors generated.
make: *** [libft.a] Error 1

$> ls -la libft.a

= Part1_functions ==============================================================

= ft_memset.c ==================================================================
$> norminette ft_memset.c | grep -E '(Error|Warning)'

norminette : command not found

$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_memset.c main.c libft.a -o user_exe

clang: error: no such file or directory: '/Users/kimtaeseon/Documents/ecole42/Libft/libft_eval/libft-war-machine/dirlibft/libft.a'

= ft_bzero.c ===================================================================
Nothing turned in

= ft_calloc.c ==================================================================
Nothing turned in

= ft_memcpy.c ==================================================================
Nothing turned in

= ft_memccpy.c =================================================================
Nothing turned in

= ft_memmove.c =================================================================
Nothing turned in

= ft_memchr.c ==================================================================
Nothing turned in

= ft_memcmp.c ==================================================================
Nothing turned in

= ft_strlen.c ==================================================================
Nothing turned in

= ft_strdup.c ==================================================================
Nothing turned in

= ft_strlcat.c =================================================================
Nothing turned in

= ft_strlcpy.c =================================================================
Nothing turned in

= ft_strchr.c ==================================================================
Nothing turned in

= ft_strrchr.c =================================================================
Nothing turned in

= ft_strnstr.c =================================================================
Nothing turned in

= ft_strncmp.c =================================================================
Nothing turned in

= ft_atoi.c ====================================================================
$> norminette ft_atoi.c | grep -E '(Error|Warning)'

norminette : command not found

$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_atoi.c main.c libft.a -o user_exe

clang: error: no such file or directory: '/Users/kimtaeseon/Documents/ecole42/Libft/libft_eval/libft-war-machine/dirlibft/libft.a'

= ft_isalpha.c =================================================================
Nothing turned in

= ft_isdigit.c =================================================================
Nothing turned in

= ft_isalnum.c =================================================================
Nothing turned in

= ft_isascii.c =================================================================
Nothing turned in

= ft_isprint.c =================================================================
Nothing turned in

= ft_toupper.c =================================================================
Nothing turned in

= ft_tolower.c =================================================================
Nothing turned in

= Part2_functions ==============================================================

= ft_strmapi.c =================================================================
Nothing turned in

= ft_substr.c ==================================================================
Nothing turned in

= ft_strjoin.c =================================================================
Nothing turned in

= ft_strtrim.c =================================================================
Nothing turned in

= ft_split.c ===================================================================
Nothing turned in

= ft_itoa.c ====================================================================
$> norminette ft_itoa.c | grep -E '(Error|Warning)'

norminette : command not found

$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_itoa.c main.c libft.a -o user_exe

clang: error: no such file or directory: '/Users/kimtaeseon/Documents/ecole42/Libft/libft_eval/libft-war-machine/dirlibft/libft.a'

= ft_putchar_fd.c ==============================================================
Nothing turned in

= ft_putstr_fd.c ===============================================================
Nothing turned in

= ft_putendl_fd.c ==============================================================
Nothing turned in

= ft_putnbr_fd.c ===============================================================
Nothing turned in

= Bonus_functions ==============================================================

= ft_lstnew.c ==================================================================
Nothing turned in

= ft_lstdelone.c ===============================================================
Nothing turned in

= ft_lstclear.c ================================================================
Nothing turned in

= ft_lstadd_front.c ============================================================
Nothing turned in

= ft_lstadd_back.c =============================================================
Nothing turned in

= ft_lstsize.c =================================================================
Nothing turned in

= ft_lstiter.c =================================================================
Nothing turned in

= ft_lstmap.c ==================================================================
Nothing turned in

= ft_lstlast.c =================================================================
Nothing turned in
